@@ -200,6 +200,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - TypoScript             Jan-Philipp Halle
 - Unicon                 Matt Oates
 - Uno IDL                Cedric Bosdonnat
+- UnrealScript			 pospi
 - Vala                   Nicolas Joseph
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
